--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -9,12 +9,14 @@
         <div class="row">
             <div class="col col-xl-10" data-aos="fade-right">
                 <div class="divider"></div>
-                <img src="/assets/img/Grad.png"/>
+                <div class="text-center text-sm-left">
+                    <img src="/assets/img/Grad.png" />
+                </div>
                 <p>I’m Marcus Franco. I am 17 years old. I’m a computer programmer and web developer.</p>
                 <p>Professionally, I’m seeking a position as a software engineer or an artificial intelligence engineer.</p>
                 <p>I’m very interested in the fields of computer science, cognitive science, and philosophy. I’ll be a freshman at UC San Diego in the fall of 2020 studying Cognitive Science with a specialization in machine learning and neural computation. The study of cognition, the brain, how the brain thinks and makes connections, how the brain and its capacity to learn can be emulated using artificial intelligence, human-computer interactions, and its implications in healthcare all deeply fascinate me. For this reason, I would really like to begin research next year.</p>
                 <p>I love music.  I play the violin and the piano any chance I can get. I’m okay with pretty much any genre of music, but I prefer relaxing songs, from ambient and classical to R&B and lo-fi. I’m still a big fan of energetic genres such as jungle, DnB, and rap/hip-hop. Regardless of the genre, I really like older songs from the 90’s and earlier.</p>
-                <p>I’m really into self-improvement, so recently I’ve gotten into things like reading, entrepreneurship, and business. This led to my discovery and exploration of philosophy, and I’m an aspiring follower of Stoicism. My favorite book has to be Meditations by Marcus Aurelius, because how powerful and motivating each passage is worded. No other book I have ever read has had such an incredible and moving delivery in the way Meditations does.</p>
+                <p>I’m really into self-improvement, so recently I’ve gotten into things like reading, entrepreneurship, and business. This led to my discovery and exploration of philosophy, and I’m an aspiring follower of Stoicism. My favorite book has to be Meditations by Marcus Aurelius, because no other book I have ever read has had such an incredible and moving delivery in the way that Meditations has.</p>
                 <p>I’d also like to start gardening. I do have a cactus, but it’s not very interactive.</p>
             </div>
         </div>
