--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -33,7 +33,12 @@
             font-size: 24px;
             letter-spacing: 0;
             line-height: 96px;
-        }
+            opacity: 0.5;
+            transition: all .3s cubic-bezier(0,1,1,1);
 
+            &.active {
+                opacity: 1;
+            }
+        }
     }
 }
