--- a/src/app/index/index.component.scss
+++ b/src/app/index/index.component.scss
@@ -2,8 +2,13 @@
 
 #section0 {
     img {
+        margin: 32px 0;
         width: 240px;
-        margin: 0 32px 16px 0;
-        float: left;
+
+        @media (min-width: 576px) {
+            width: 240px;
+            margin: 0 32px 16px 0;
+            float: left;
+        }
     }
 }
