--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,11 +4,11 @@
             <svg xmlns="http://www.w3.org/2000/svg" width="300" height="1080" viewBox="0 0 300 1080"><defs><style>.a{fill:#a63a50;}</style></defs><path class="a" d="M1920,1080H1658L1520,0h400Z" transform="translate(-1520)"/></svg>
             <h1 class="text-right">Marcus Franco</h1>
             <ul class="mt-5">
-                <li><a class="active" href="#" routerLink="/">About</a></li>
-                <li><a href="#" routerLink="/education">Education</a></li>
-                <li><a href="#" routerLink="/skills">Skills</a></li>
-                <li><a href="#" routerLink="/projects">Projects</a></li>
-                <li><a href="#" routerLink="/contact">Contact</a></li>
+                <li><a href="#" routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">About</a></li>
+                <li><a href="#" routerLink="/education" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Education</a></li>
+                <li><a href="#" routerLink="/skills" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Skills</a></li>
+                <li><a href="#" routerLink="/projects" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Projects</a></li>
+                <li><a href="#" routerLink="/contact" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Contact</a></li>
             </ul>
         </div>
     </div>
@@ -28,20 +28,20 @@
                 
                 <div class="collapse navbar-collapse" id="navcon">
                     <ul class="navbar-nav">
-                        <li class="nav-item active">
-                            <a class="nav-link" href="#" routerLink="/">About <span class="sr-only">(current)</span></a>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#" routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">About <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#" routerLink="/education">Education</a>
+                            <a class="nav-link" href="#" routerLink="/education" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Education</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#" routerLink="/skills">Skills</a>
+                            <a class="nav-link" href="#" routerLink="/skills" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Skills</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#" routerLink="/projects">Projects</a>
+                            <a class="nav-link" href="#" routerLink="/projects" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Projects</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#" routerLink="/contact">Contact</a>
+                            <a class="nav-link" href="#" routerLink="/contact" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Contact</a>
                         </li>
                     </ul>
                 </div>
